Small style fix: prevent vertical overflow.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -104,6 +104,7 @@ input, textarea, #settings-dropdown:focus {
 
 #topic-pane {
     padding: 0;
+    margin-bottom: 0;
     overflow: scroll;
 }
 
